--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -5,7 +5,7 @@
 .loader_body{
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    overflow-y: hidden;
     position: absolute;
     top: 0;
     left: 0;
