--- a/src/components/events/Event.css
+++ b/src/components/events/Event.css
@@ -1,27 +1,64 @@
-.middle-box{
-    background-image: url('./Images/bg.png');
-    background-size: cover;
-    background-repeat: none;
-    margin:0;
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(139, 75, 14);
-}
 
 
-
-.event-box{
-    background-image: url('./Images/1.png');
-    background-size: cover;
-    background-repeat: none;
-    margin:0;
-    display: flex;
-    height: 320px;
-    width: 320px;
-    justify-content: center;
-    align-items: center;
+  @media screen and (min-width:1150px) {
+    .middle-box {
+      background-image: url('./Images/bgE.png');
+      background-size: cover;
+     
+       
+     
+        width: 100vw;
+        padding: 30px;
+      }
     
-}
+  }
+  @media screen and (max-width:1150px) {
+    .middle-box {
+      background-image: url('./Images/bgE.png');
+      background-size: contain;
+     
+       
+     
+        width: 100vw;
+        padding: 30px;
+      }
+    
+  }
+  
+  .event-box {
+    background-image: url('./Images/11.png');
+    background-size: cover;
+    background-repeat: none;
+    width: 820px;
+    height: 710px;
+    padding: 40px;   
+    
+margin: auto;
+ 
+    display: flex;
+   
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .event_img {
+    max-width: 83%;
+
+
+    height: auto;
+    
+    /* padding: 10px; */
+  }
+  
+
+  .events_slip{
+      box-shadow: 0 0 0 2px black, 8px 8px 0 0 #ff3b78;
+      background-color: #03d3cd;
+      text-align: center;
+      font-weight: bolder;
+      width: 150px;
+      margin: auto;
+      font-size: 30px;
+      padding: 10px;
+  
+  }
