--- a/src/components/cl/CL.css
+++ b/src/components/cl/CL.css
@@ -1,12 +1,15 @@
 .cl_form{
-    box-shadow: 0 0 0 2px black, 8px 8px 0 0 #34cc98;
-    background-color: #ff6600;
+    background-color: black;
+   
 margin: 20px;  
+border: 2px solid white;
+border-radius: 10px;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 padding: 30px;
+margin-bottom: -15vw;
 
 }
 .CL{
@@ -14,17 +17,19 @@ padding: 30px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
 
 }
 .cl_txt_ip{
     padding:10px;
     margin: 20px;
-    width: 200px;
+    width: 250px;
     
-    font-size: 10px;
+    font-size: 15px;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 5px;
+    color: white;
 }
 .cl_txt_ip::placeholder{
     color: white;
@@ -33,10 +38,11 @@ padding: 30px;
 .cl_txt_dropdown{
     padding:10px;
     margin: 20px;
-    width: 220px;
-    font-size: 10px;
+    width: 250px;
+    font-size: 15px;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid white;
+     color: white;
     border-radius: 5px;
 
 }
@@ -45,6 +51,7 @@ padding: 30px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+
 }
 .warning_drive_link{
     font-weight: bolder;
@@ -59,6 +66,7 @@ padding: 30px;
     border: transparent;
     font-weight: bolder;
     width: 120px;
+    border: 1px solid white;
     
 
 }
@@ -74,8 +82,8 @@ padding: 30px;
 
 @media screen and (min-width:720px) {
     .cl_txtarea_ip{
-        width: 440px;
-        margin-top: 20px;
+        width: 540px;
+        /* margin-top: 10px; */
         height: 200px;
         padding: 10px;
     }
@@ -83,7 +91,7 @@ padding: 30px;
         width: 660px;
     }
     .cl_ele{
-        height: 500px;
+        height: 600px;
         margin: 30px;
     }
 }
@@ -104,7 +112,8 @@ padding: 30px;
 }
 .cl_txtarea_ip{
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid white;
+    font-size: 15px;
     border-radius: 5px;
 }
 .cl_txtarea_ip::placeholder{
@@ -114,10 +123,9 @@ padding: 30px;
 .cl_bg {
     z-index: -1;
     position: absolute;
-    width: 100vw;
-
     top: 0;
     left: 0;
+    object-fit: contain;
    
     
 }
@@ -141,6 +149,7 @@ padding: 30px;
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+    
 }
 
 .cl_eles{
@@ -158,9 +167,10 @@ padding: 30px;
     /* margin-top: 100px; */
 }
 .ping_cl{
-    /* margin-top: -65vh; */
+
     z-index: -1;
     width: 100vw;
+    margin-top: -15vw;
     
 }
 .approve_cl{
@@ -186,3 +196,4 @@ padding: 30px;
 height: 320px;
 margin: 30px;
 }
+
