--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -81,7 +81,8 @@
     align-items: center;
 }
 .vc,.cf{
-    height: 40px;
+    height: 55px;
+    margin-top: 100px;
 }
 .vc{
     transform: rotate(90deg);
