--- a/src/components/cl/CL.css
+++ b/src/components/cl/CL.css
@@ -11,12 +11,14 @@ align-items: center;
 padding: 30px;
 margin-bottom: -15vw;
 
+
 }
 .CL{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+  
     
 
 }
@@ -122,10 +124,13 @@ margin-bottom: -15vw;
 }
 .cl_bg {
     z-index: -1;
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     left: 0;
-    object-fit: contain;
+    /* object-fit: contain; */
+   
+    /* width: 100vw; */
+    
    
     
 }
@@ -148,7 +153,15 @@ margin-bottom: -15vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    /* margin-top: 30px; */
+    padding-top: 30px;
+    width: 150vw;
+    
+    /* z-index: -1; */
+    
+    background-image: url("https://mokshainnovision.s3.eu-north-1.amazonaws.com/bgs/cl_bg.png");
+    background-repeat: repeat-x;
+    background-size: cover;
     
 }
 
