--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -3,7 +3,7 @@
   background-size: contain;
  
   
-    min-height: 100%;
+    min-height: 300vh;
     width: 100%;
 
     /* height: 200vh; */
@@ -46,6 +46,23 @@
     border: 2px solid white;
     width: 150px;
     padding: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 30px;
+  }
+  .addon-u-d{
+    text-decoration: underline;
+  }
+  .btn-day-filter{
+    background-color: #38b6ff;
+    box-shadow: 0 0 0 2px black, 8px 8px 0 0 #5d18eb;
+    padding: 10px;
+    font-weight: bolder;
+    cursor: pointer;
+    font-size: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 30px;
   }
   #searchInput{
     background-color: #5de1e6;
@@ -56,6 +73,9 @@
     border: 2px solid white;
     width: 200px;
     padding: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 30px;
   }
   .e_h_head{
     background-color: #ca6ce5;
@@ -73,5 +93,12 @@
     justify-content: space-evenly;
     align-items: center;
     margin-top: 50px;
+    
     flex-wrap: wrap;
+  }
+  .days-filter{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
   }
