--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -51,18 +51,19 @@
     margin-top: 30px;
   }
   .addon-u-d{
-    text-decoration: underline;
+    background-color: white;
+    border-radius: 20px;
+    margin: 10px;
   }
   .btn-day-filter{
-    background-color: #38b6ff;
-    box-shadow: 0 0 0 2px black, 8px 8px 0 0 #5d18eb;
+
     padding: 10px;
     font-weight: bolder;
     cursor: pointer;
     font-size: 20px;
     margin-left: 30px;
     margin-right: 30px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
   }
   #searchInput{
     background-color: #5de1e6;
@@ -101,4 +102,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    background-color: #38b6ff;
+    box-shadow: 0 0 0 2px black, 8px 8px 0 0 #5d18eb;
+    margin-top: 30px;
   }
