--- a/src/components/accomodation/Accomodation.css
+++ b/src/components/accomodation/Accomodation.css
@@ -1,7 +1,5 @@
 .acc{
-    background-image: url("./bgacc.png");
-    background-size: contain;
-    width: 100vw;
+
     /* height: 100vh; */
     /* padding: 30px; */
     display: flex;
@@ -11,7 +9,11 @@
 }
 
 
-
+.acc_M{
+    background-image: url("./bgacc.png");
+    background-size: contain;
+    width: 100vw;
+}
 .acc_p{
     background-color: #5de1e6;
     box-shadow: 0 0 0 2px black, 8px 8px 0 0 yellow;
@@ -67,7 +69,7 @@
 .acc_head{
     /* width: 60vw; */
     margin-top: 20vh;
-    margin-left: 50px;
+    /* margin-left: 50px; */
 }
 .i3{
     height: 300px;
@@ -104,17 +106,21 @@
     margin-left: 10px;
     font-weight: bolder;
 }
-@media screen and (max-width:820px) {
+
+@media screen and (max-width:900px) {
     .tower{
-        width: 300px;
+        display: none;
     }
     .acc{
         justify-content: center;
         
     }
-    .acc_head{
-        margin-left: 0px;
+    .acc_s{
+        width: 80vw;
     }
+    /* .acc_head{
+        margin-left: 0px;
+    } */
     .heads_acc{
         margin-left: 0px;
     }
