--- a/src/components/sponsors/Sponsor.css
+++ b/src/components/sponsors/Sponsor.css
@@ -94,6 +94,7 @@
       animation: animate  
                 1s linear infinite; 
                 margin-bottom: -15px;
+                margin-top: 20px;
 
 }
 
@@ -102,7 +103,7 @@
     font-size: 18px;
     border-radius: 10px;
     width: 300px;
-    height: 350px;
+    /* height: 350px; */
     font-weight: bolder;
     /* width: 200px; */
     color: white;
